--- a/coding/NgheizitApp/app/build.gradle
+++ b/coding/NgheizitApp/app/build.gradle
@@ -10,6 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+
+        jackOptions{
+            enabled true
+        }
+
     }
     buildTypes {
         release {
@@ -17,9 +23,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    /* 添加Java8编译选项 */
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
+
+    /* 更新app模块Gradle依赖项，以包含ArcGIS Runtime SDK for Android依赖项 */
+    compile 'com.esri.arcgisruntime:arcgis-android:100.6.0'
+
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -27,4 +45,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     testCompile 'junit:junit:4.12'
+
+
 }
