--- a/coding/NgheizitApp/app/src/main/AndroidManifest.xml
+++ b/coding/NgheizitApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pc_08.myapplication">
 
+     <!--更新Android清单文件以允许网络访问，并指示应用程序使用OpenGL2.0或更高版本 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
