--- a/coding/NgheizitApp/build.gradle
+++ b/coding/NgheizitApp/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -15,11 +16,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
 
         /* 将项目Gradle存储库更新为Esri的Bintray maven存储库 */
-        maven{
-            url 'https://esri.bintray.com/arcgis'
-        }
+//        maven{
+//            url 'https://esri.bintray.com/arcgis'
+//        }
     }
 }
 
