--- a/coding/NgheizitApp/app/build.gradle
+++ b/coding/NgheizitApp/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 //    compile 'com.esri.arcgisruntime:arcgis-android:100.6.0'
 
 
+//    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
