Create ArcGIS Runtime SDK for Android

--- a/coding/NgheizitApp/app/src/main/AndroidManifest.xml
+++ b/coding/NgheizitApp/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DirActivity"></activity>
+        <activity android:name=".NoteActivity"></activity>
     </application>
 
 </manifest>
