--- a/coding/NgheizitApp/app/src/main/AndroidManifest.xml
+++ b/coding/NgheizitApp/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pc_08.myapplication">
 
-     <!--更新Android清单文件以允许网络访问，并指示应用程序使用OpenGL2.0或更高版本 -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 启动拨打电话权限 -->
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,7 @@
         </activity>
         <activity android:name=".DirActivity"></activity>
         <activity android:name=".NoteActivity"></activity>
+        <activity android:name=".CallphoneActivity"></activity>
     </application>
 
 </manifest>
