--- a/coding/XizheMap/app/build.gradle
+++ b/coding/XizheMap/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.arcgisruntimeandroid"
+        applicationId "com.example.xizhemap"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
@@ -15,11 +15,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            aaptOptions.cruncherEnabled = false
+            aaptOptions.useNewCruncher = false
         }
 
     }
-
-     //在android块中添加Java8编译选项
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -28,14 +29,12 @@ android {
 }
 
 dependencies {
-
-    // 更新app模块Gradel依赖项，以包含ArcGIS Runtime SDK for Android依赖项
-    implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+
+    implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
 }
