--- a/coding/XizheMap/app/src/main/AndroidManifest.xml
+++ b/coding/XizheMap/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".AddFeaturesActivity" />
         <activity android:name=".DisplayDeviceLocationActivity" />
         <activity android:name=".ChangeSublayerVisibilityActivity" />
+        <activity android:name=".QuestionActivity" />
 
     </application>
 
