--- a/coding/NgheizitApp/app/build.gradle
+++ b/coding/NgheizitApp/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     testCompile 'junit:junit:4.12'
 
+    compile 'com.zhy:okhttputils:2.6.2'
+
 
 }
