--- a/coding/NgheizitApp/app/src/main/AndroidManifest.xml
+++ b/coding/NgheizitApp/app/src/main/AndroidManifest.xml
@@ -3,11 +3,13 @@
     package="com.example.pc_08.myapplication">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- 启动拨打电话权限 -->
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/dwarfs"
         android:label="@string/app_name"
@@ -22,8 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DirActivity"></activity>
-        <activity android:name=".NoteActivity"></activity>
         <activity android:name=".CallphoneActivity"></activity>
+        <activity android:name=".GetInternetActivity"></activity>
     </application>
 
 </manifest>
